--- a/RUPassReset/Views/Home/Forgot.cshtml
+++ b/RUPassReset/Views/Home/Forgot.cshtml
@@ -4,7 +4,7 @@
 	<hr />
 	<div class="row">
 		<div class="col-md-6 info">
-			<p>Enter your RU login name to get started.</p>
+			<p>Forgot your password? Don't worry, enter your RU login name to get started.</p>
 		</div>
 		<div class="col-md-6">
 			<form method="GET" action="">
