--- a/RUPassReset/Views/Home/Change.cshtml
+++ b/RUPassReset/Views/Home/Change.cshtml
@@ -1,4 +1,4 @@
-﻿@model RUPassReset.Service.Models.Password.ChangePasswordModel
+﻿@model RUPassReset.Service.Models.Password.ChangePassword
 
 <div class="center-panel">
 	<h3>Change password</h3>
