--- a/RUPassReset/Views/Home/Forgot.cshtml
+++ b/RUPassReset/Views/Home/Forgot.cshtml
@@ -1,4 +1,4 @@
-﻿@model RUPassReset.Service.Models.Password.ForgotPasswordModel
+﻿@model RUPassReset.Service.Models.Password.Password
 
 <div class="center-panel">
 	<h3>Forgotten password</h3>
