--- a/RUPassReset/Views/Shared/_Layout.cshtml
+++ b/RUPassReset/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 		@Styles.Render("~/Content/css/bootstrap.min.css")
 		@Styles.Render("~/Content/css/site.css")
 		@Scripts.Render("~/bundles/modernizr")
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
