ldap connection finally working

--- a/RUPassReset/Views/Home/Change.cshtml
+++ b/RUPassReset/Views/Home/Change.cshtml
@@ -10,7 +10,7 @@
 			<p><i>Note that the password must be at least 6 characters long.</i></p>
 		</div>
 		<div class="col-md-6">
-			@using (Html.BeginForm("Change", "Home", FormMethod.Post))
+			@using (Html.BeginForm("Verify", "Home", FormMethod.Post))
 			{
 				@Html.HiddenFor(model => model.Token)
 				@Html.HiddenFor(model => model.Username)
@@ -20,6 +20,7 @@
 						@class="form-control",
 						@placeholder="New password"
 					})
+					@Html.ValidationMessage("Error", new {@class="text-danger"})
 					@Html.ValidationMessageFor(model => model.PasswordNew, null, new {@class="text-danger"})
 				</div>
 				<div class="form-group">
