--- a/RUPassReset/Views/Home/PasswordChangeSuccess.cshtml
+++ b/RUPassReset/Views/Home/PasswordChangeSuccess.cshtml
@@ -1,1 +1,19 @@
 ﻿
+
+<div class="center-panel">
+	<h3>Change password</h3>
+	<hr />
+	<div class="row">
+		<div class="col-md-6 info success-panel">
+			<p style="text-align: center;"><i class="fa fa-check-circle"></i></p>
+			<p class="lead">Success!</p>
+		</div>
+		<div class="col-md-6">
+			<p>Woo! Your password has been reset. Like a wise man once said: </p>
+			<blockquote class="pull-right">
+				<p>Keep it secret. Keep it safe.</p>
+				<small>Gandalf in <cite title="Source Title">LOTR: Fellowship of the Ring</cite></small>
+			</blockquote>
+		</div>
+	</div>
+</div>
