--- a/RUPassReset/Views/Home/ResetEmailSent.cshtml
+++ b/RUPassReset/Views/Home/ResetEmailSent.cshtml
@@ -1,5 +1,9 @@
 ﻿@model RUPassReset.Service.DBModels.UserDTO
 
+@{
+    ViewBag.Title = "Reset your password";
+}
+
 <div class="center-panel">
 	<h3>Forgotten password</h3>
 	<hr />
