--- a/RUPassReset/Views/Home/UnableToVerify.cshtml
+++ b/RUPassReset/Views/Home/UnableToVerify.cshtml
@@ -1,4 +1,7 @@
 ﻿
+@{
+    ViewBag.Title = "Unable to verify";
+}
 
 <div class="center-panel">
 	<h3>Forgotten password</h3>
@@ -12,7 +15,7 @@
 			<p>We apologize but we cannot verify this token. Please try again.</p>
 			<hr />
 			<div class="btn-controls pull-right">
-				<a href="/reset" class="btn btn-primary">Continue</a>
+				<a href="/" class="btn btn-primary">Continue</a>
 			</div>
 		</div>
 	</div>
