--- a/RUPassReset/Views/Home/PasswordChangeSuccess.cshtml
+++ b/RUPassReset/Views/Home/PasswordChangeSuccess.cshtml
@@ -1,4 +1,7 @@
 ﻿
+@{
+    ViewBag.Title = "Change password";
+}
 
 <div class="center-panel">
 	<h3>Change password</h3>
@@ -9,7 +12,7 @@
 			<p class="lead">Success!</p>
 		</div>
 		<div class="col-md-6">
-			<p>Woo! Your password has been reset. Like a wise man once said: </p>
+			<p>Woo! Your password has been reset. Like a wise old man once said: </p>
 			<blockquote class="pull-right">
 				<p>Keep it secret. Keep it safe.</p>
 				<small>Gandalf in <cite title="Source Title">LOTR: Fellowship of the Ring</cite></small>
