changing success message and receiving email instead of ssn

--- a/RUPassReset/Views/Home/PasswordChangeSuccess.cshtml
+++ b/RUPassReset/Views/Home/PasswordChangeSuccess.cshtml
@@ -12,11 +12,11 @@
 			<p class="lead">Success!</p>
 		</div>
 		<div class="col-md-6">
-			<p>Woo! Your password has been reset. Like a wise old man once said: </p>
-			<blockquote class="pull-right">
-				<p>Keep it secret. Keep it safe.</p>
-				<small>Gandalf in <cite title="Source Title">LOTR: Fellowship of the Ring</cite></small>
-			</blockquote>
+			<p>Woo!</p>
+			<p>Your password has been successfully reset.</p>
+			<div class="btn-controls pull-right">
+				<a href="http://www.ru.is" class="btn btn-primary">Finish</a>
+			</div>
 		</div>
 	</div>
 </div>
