--- a/RUPassReset/Views/Home/ResetEmailSent.cshtml
+++ b/RUPassReset/Views/Home/ResetEmailSent.cshtml
@@ -13,7 +13,7 @@
 			<p class="lead">Success!</p>
 		</div>
 		<div class="col-md-6">
-			<p>We sent an email with a reset token at <b>@Model.SecondaryEmail</b>. Please follow the instructions there to reset your password.</p>
+			<p>We sent an email with a reset token to <b>@Model.SecondaryEmail</b>. Please follow the instructions there to reset your password.</p>
 		</div>
 	</div>
 </div>
