--- a/RUPassReset/Views/Home/Reset.cshtml
+++ b/RUPassReset/Views/Home/Reset.cshtml
@@ -8,7 +8,7 @@
 	<hr />
 	<div class="row">
 		<div class="col-md-6 info">
-			<p>Forgot your password? Don't worry, enter your social security number to get started.</p>
+			<p>Forgot your password? Don't worry, enter your email address that you used in your registration to get started.</p>
 			<p>Hit <i>Cancel</i> to go back to RU's website.</p> 
 		</div>
 		<div class="col-md-6">
@@ -18,7 +18,7 @@
 					@Html.TextBox("SSN", null, new
 					{
 						@class="form-control ssn-field", 
-						@placeholder = "Social security number",
+						@placeholder = "Email address",
 						@autofocus = true
 					})
 					@Html.ValidationMessage("Error", new {@class="text-danger"})
