--- a/RUPassReset/Views/Shared/_Layout.cshtml
+++ b/RUPassReset/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
 		</div>
 		@Scripts.Render("~/bundles/jquery")
 		@Scripts.Render("~/Content/js/bootstrap.min.js")
-		@Scripts.Render("~/Content/js/jquery.maskedinput.min.js")
+		@Scripts.Render("~/Content/js/jquery.inputmask.js")
+		@Scripts.Render("~/Content/js/jquery.inputmask.regex.extensions.js")
 		@Scripts.Render("~/Content/js/site.js")
 	</body>
 </html>
